--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Student Bio</title>
 </head>
 
