--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <html lang="en-us">
 
 <head>
+
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Student Bio</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 
 <body>
@@ -23,9 +25,7 @@
 
 			<img src="Cactuar_Pixels.jpg" alt="Cactuar Pic" height="200" width="200" id="bio-image">
 
-			<p>Hi!  My name is Steven and I'm part of the UNC Boot Camp class!  I'm a software developer with a background mainly in C++ applications for the defense and retail industries.  I graduated from Clemson University in 2004 with a Bachelor's Degree in Computer Engineering.</p>
-
-			<p>I've lived in the Triangle area for over six years.  Outside of work, I manage and play on several indoor soccer teams, and I'm on the local leadership team for a national charity that raises money for the Children's Miracle Network through playing video and board games.  </p>
+			<p>Hi!  My name is Steven and I'm part of the UNC Boot Camp class!  I'm a software developer with a background mainly in C++ applications for the defense and retail industries.  I graduated from Clemson University in 2004 with a Bachelor's Degree in Computer Engineering.  I've lived in the Triangle area for over six years.</p>
 
 		</section>
 
