--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<meta charset="utf-8">
 	<title>Student Bio</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
